--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .app {
-  overflow-x: hidden;
   width: 100%;
 }
 
