--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -418,7 +418,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-y: auto;
   }
 
   .home__content {
